--- a/.github/workflows/slsa-ko.yaml
+++ b/.github/workflows/slsa-ko.yaml
@@ -32,7 +32,7 @@ jobs:
       packages: write
     uses: laurentsimon/slsa-github-generator-ko/.github/workflows/slsa3-builder.yml@main
     with:
-      args: -B --platform=linux/amd64,linux/arm64,linux/386,linux/arm --tags=tag5,tag6 .
+      args: -B --platform=linux/amd64,linux/arm64,linux/386,linux/arm --tags=latest .
       username: asraa
       envs: KO_DOCKER_REPO=docker.io/asraa,GIT_VERSION=${{needs.args.outputs.version}},GIT_SOMETHING=${{needs.args.outputs.something}}
     secrets:
